--- a/index.html
+++ b/index.html
@@ -1,266 +1,113 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
     <title>Home</title>
+    <style>
+
+    </style>
+
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">iCoder</a>
+<body style="font-family: Time New Roman; color: #000080;">
+
+<form action="" method="get">
+    <p align="center"><b>
+        <!-- <font size="6">J</font> -->
+        <br><label style="font-size:30px;">JAIMIN PATEL OFFICE</label>
+        <center>Gujarat, India</font><br>Official Home Page</center>
+    </b>
+        <font size="1">&nbsp;</font>
+    </p>
+    <hr style="width:98%; margin-top:-27px; border-width: 2px; background-color: #000080;">
+    </br>
+    <nav class="navbar navbar-expand-lg navbar-light   mx-3" style="margin-top: -40px;">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" style="color: #000080;" href="http://127.0.0.1:8000/accounting">Home <span
+                            class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/About.html">About</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Topics
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
+                    <a class="nav-link" style="color: #000080;" href="http://127.0.0.1:8000/accounting/voucherslogin">Vaouchers</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact Us</a>
+                    <a class="nav-link" style="color: #000080;" href="http://127.0.0.1:8000/accounting/tjlogin">Trading
+                        Journal</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" style="color: #000080;" href="contact.html">Reports</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-            <div class="mx-2">
-                <button type="button" class="btn btn-info" data-toggle="modal" data-target="#LoginModal">Login</button>
-                <button type="button" class="btn btn-info" data-toggle="modal" data-target="#SignUpModal">Sign
-                    Up</button>
-            </div>
         </div>
     </nav>
 
-    <!-- Login Modal -->
-    <div class="modal fade" id="LoginModal" tabindex="-1" role="dialog" aria-labelledby="LoginModal" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="LoginModal">Login to iCoder</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <form class="form-signin mx-5">
-                        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-                        <label for="inputEmail" class="sr-only my-2">Email address</label>
-                        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required=""
-                            autofocus="">
-                        <label for="inputPassword" class="sr-only">Password</label>
-                        <input type="password" id="inputPassword" class="form-control my-2" placeholder="Password"
-                            required="">
-                        <div class="checkbox mb-3">
-                            <label>
-                                <input type="checkbox" value="remember-me"> Check me out
-                            </label>
-                        </div>
-                        <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
-                    </form>
 
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
-            </div>
+    <hr style="width:98%; margin-top:0px; border-width: 2px; background-color: #000080;">
+    <div class="container" style="margin-left: 300px">
+        <p align="center">
+        </p>
+        <label style="font-size: 23px; margin-left: 400px;"><b>JAIMIN B. PATEL</b></label></br>
+        <div style="line-height: 1.00;">
+            <label style="font-size: 18px; margin-left: 400px;"><b>Office:</b> 38-Swaminarayan Nagar Shopping
+                Center</label>
+            <label style="font-size: 18px; margin-left: 455px; margin-top: ;">Nr. Navarang Bungalows, Opp. Dhanvir
+                Hanuman
+                Temple</label>
+            <label style="font-size: 18px; margin-left: 455px;">Mansa-Itadara Road, Mansa-382845</label></br>
+            <label style="font-size: 18px; margin-left: 455px;">Gandhinagar, Gujarat, India</label></br>
+            <label style="font-size: 18px; margin-left: 400px;"><b>Home:</b> 189, Bagvas, Itadara</label></br>
+            <label style="font-size: 18px; margin-left: 455px;">Mansa-382845, Gandhinagar</label></br>
+            <label style="font-size: 18px; margin-left: 455px;">Gujarat, India</label></br>
+            <label style="font-size: 18px; margin-left: 400px;"><b>Contact:</b> +91 9512449697</label></br>
+            <label style="font-size: 18px; margin-left: 470px;">officejaiminpatel@gmail.com</label></br>
+            <label style="font-size: 18px; margin-left: 400px;"><b>Social: </b><a
+                    href="https://www.instagram.com/jaiminpateloffice/"
+                    target="_blank">@jaiminpateloffice</a></label></br>
+            {% load static %}
+            <p align="left"><img src="{%static 'accounting/jaimin.png' %}" border="0" alt="jaiminpateloffice"
+                                 width="290"
+                                 height="305"
+                                 style="margin-left: 50px; margin-top: -310px;">
         </div>
     </div>
+    <hr style="width:98%; border-width: 2px; background-color: #000080;">
+    <p align="center"><img src="{%static 'accounting/logo.png' %}" border="0" alt="jaiminpateloffice"
+                           width="280" height="70" style="margin-top: -10px;">
 
-    <!-- SignUp Modal -->
-    <div class="modal fade" id="SignUpModal" tabindex="-1" role="dialog" aria-labelledby="SignUpModal"
-        aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="SignUpModal">Sign Up in iCoder</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <form class="form-signin mx-5">
-                        <h1 class="h3 font-weight-normal">Please sign Up</h1>
-                        <label for="inputEmail" class="sr-only my-2">Email address</label>
-                        <input type="email" id="inputEmail" class="form-control my-2" placeholder="Email address"
-                            required="" autofocus="">
-                        <label for="inputPassword" class="sr-only">Password</label>
-                        <input type="password" id="inputPassword" class="form-control my-2" placeholder="Password"
-                            required="">
-                        <input type="password" id="inputPassword" class="form-control my-2"
-                            placeholder="Conform Password" required="">
-                        <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
-                    </form>
-                </div>
-                <div class="modal-footer my-6">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
-            </div>
-        </div>
+
+    <hr style="width:98%; border-width: 2px; background-color: #000080; margin-top: 20px;">
+
+
+    <div class="mx-3">
+        <dt>
+            <font style="font-size: 16.5px;">Copyright © 2020-2021<b> Jaimin Patel Office</b></font>
+        </dt>
     </div>
 
-    <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="causal1.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>welcome to iCoder</h5>
-                    <p>Technology News, Developer and Trends</p>
-                    <button type="button" class="btn btn-primary">Technology</button>
-                    <button type="button" class="btn btn-success">Web Development</button>
-                    <button type="button" class="btn btn-danger">Teach fun</button>
-                </div>
-
-            </div>
-            <div class="carousel-item">
-                <img src="causal2.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>The Best codding Blog</h5>
-                    <p>Technology News, Developer and Trends</p>
-                    <button type="button" class="btn btn-primary">Technology</button>
-                    <button type="button" class="btn btn-success">Web Development</button>
-                    <button type="button" class="btn btn-danger">Teach fun</button>
-                </div>
-
-            </div>
-            <div class="carousel-item">
-                <img src="causal3.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Award Winning Blog</h5>
-                    <p>Technology News, Developer and Trends</p>
-                    <button type="button" class="btn btn-primary">Technology</button>
-                    <button type="button" class="btn btn-success">Web Development</button>
-                    <button type="button" class="btn btn-danger">Teach fun</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    
-
-    <div class="container my-4">
-        <div class="row mb-2">
-            <div class="col-md-6">
-                <div
-                    class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                    <div class="col p-4 d-flex flex-column position-static">
-                        <strong class="d-inline-block mb-2 text-primary">World</strong>
-                        <h3 class="mb-0">Global Conferences</h3>
-                        <div class="mb-1 text-muted">Nov 12</div>
-                        <p class="card-text mb-auto">This is a wider card with supporting text below as a natural
-                            lead-in to
-                            additional content.</p>
-                        <a href="#" class="stretched-link">Continue reading</a>
-                    </div>
-                    <div class="col-auto d-none d-lg-block">
-                        <img class="bd-placeholder-img" width="200" height="250" src="global1.jpg" alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div
-                    class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                    <div class="col p-4 d-flex flex-column position-static">
-                        <strong class="d-inline-block mb-2 text-success">Design</strong>
-                        <h3 class="mb-0">Learn Designing</h3>
-                        <div class="mb-1 text-muted">Nov 11</div>
-                        <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to
-                            additional content.</p>
-                        <a href="#" class="stretched-link">Continue reading</a>
-                    </div>
-                    <div class="col-auto d-none d-lg-block">
-                        <img class="bd-placeholder-img" width="200" height="250" src="design2.jpg" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row mb-2">
-            <div class="col-md-6">
-                <div
-                    class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                    <div class="col p-4 d-flex flex-column position-static">
-                        <strong class="d-inline-block mb-2 text-primary">FrontEnd</strong>
-                        <h3 class="mb-0">Bootstrap Templates</h3>
-                        <div class="mb-1 text-muted">Nov 12</div>
-                        <p class="card-text mb-auto">This is a wider card with supporting text below as a natural
-                            lead-in to
-                            additional content.</p>
-                        <a href="#" class="stretched-link">Continue reading</a>
-                    </div>
-                    <div class="col-auto d-none d-lg-block">
-                        <img class="bd-placeholder-img" width="200" height="250" src="global2.jpg" alt="">
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div
-                    class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
-                    <div class="col p-4 d-flex flex-column position-static">
-                        <strong class="d-inline-block mb-2 text-success">Python</strong>
-                        <h3 class="mb-0">Learn Python</h3>
-                        <div class="mb-1 text-muted">Nov 11</div>
-                        <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to
-                            additional content.</p>
-                        <a href="#" class="stretched-link">Continue reading</a>
-                    </div>
-                    <div class="col-auto d-none d-lg-block">
-                        <img class="bd-placeholder-img" width="200" height="250" src="design1.jpg" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-         <!-- FOOTER -->
-  <footer class="container">
-    <p class="float-right"><a href="#">Back to top</a></p>
-    <p>© 2017-2020 Company, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
-  </footer>
-
-
-    </div>
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+</form>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
         crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous"></script>
 </body>
 
